# scrapper-gabriel

./: .gitignore  .pre-commit-config.yaml  Justfile  historical_data.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/: .env  Dockerfile.dev  Dockerfile.prod  compose.yml  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  role-strimzi.yaml  role.yaml  rolebinding-strimzi.yaml  rolebinding.yaml  serviceaccount.yaml
src/scrapper/: __init__.py  main.py  producer.py  settings.py
